--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
   },
   "devDependencies": {
     "vite": "^5.0.0",
-    "tailwindcss": "^3.5.0",
-    "postcss": "^8.4.0",
-    "autoprefixer": "^10.4.0"
+    ""tailwindcss": "^3.4.3"
+": "^3.5.0",
+    "postcss": "^8.4.38",
+    "autoprefixer": "^10.4.19"
   }
 }
