--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
   },
   "devDependencies": {
     "vite": "^5.2.0",
-    ""tailwindcss": "^3.4.3"
-": "^3.5.0",
+    "tailwindcss": "^3.4.3",
     "postcss": "^8.4.38",
     "autoprefixer": "^10.4.19"
   }
